# chest_x_ray_computer_vision_task_02

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
kaggle/: kaggle.json
src/: download_dataset.py  model.py  utils.py  validation.py
